# tagged-urn-rs

./: .gitignore  Cargo.toml  Cargo.toml.wstemplate  README.md  TEST_CATALOG.md  test_json_format.rs  version.txt
docs/: RULES.md
src/: lib.rs  tagged_urn.rs
